<resources>
    <string name="google_maps_key">AIzaSyBVoA4t0JAPGOb0SXMSSNQuiYGYlfNQCAM</string>
    <string name="app_name">SNSV(SM)</string>
    <string name="action_settings">Settings</string>
    <string name="menu_summary">Summary</string>
    <string name="menu_route">Route</string>
    <string name="menu_result">Result</string>
    <string name="menu_infor">Info</string>
    <string name="salesreport">Sales Report</string>
    <string name="salesshop">Sales Shop</string>
    <string name="delivery">Delivery</string>
    <string name="display">Display</string>
    <string name="date">Date</string>
    <string name="shopInfo">Shop Info</string>
    <string name="gps">GPS</string>
    <string name="order">Order</string>
    <string name="editShop">Edit shop info</string>
    <string name="newShop">New shop info</string>
    <string name="save">Save</string>
    <string name="province">Province</string>
    <string name="ward">Ward</string>
    <string name="street">Street (*)</string>
    <string name="shopName">Shop Name</string>
    <string name="owner">Owner</string>
    <string name="createDate">Create Date</string>
    <string name="closeDate">Close Date</string>
    <string name="dist">District (*)</string>
    <string name="houseNo">House No (*)</string>
    <string name="grade">Grade</string>
    <string name="mobile">Mobile</string>
    <string name="deliveryDealer">Delivery Dealer</string>
    <string name="shopInformation">1. Shop information</string>
    <string name="orderInfo">2. Order information</string>
    <string name="displayinfo">3. Display information</string>
    <string name="previousVisit">Previous Visit</string>
    <string name="lastMonth">Last Month</string>
    <string name="mtd">Mtd</string>
    <string name="item">Item</string>
    <string name="face">Face</string>
    <string name="hanger">Hanger</string>
    <string name="standee">Standee</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="stock">Stock</string>
    <string name="pie">Pie</string>
    <string name="snack">Snack</string>
    <string name="gum">Gum</string>
    <string name="brand">Brand</string>
    <string name="productnm">Product NM</string>
    <string name="returnGoods">Return Goods\n(EA)</string>
    <string name="returnGoodsCase">Return Goods\n(Case)</string>
    <string name="sales">Sales</string>
    <string name="nonShop">NonShop</string>
    <string name="tgt">TGT</string>
    <string name="p_tgt">%TGT</string>
    <string name="today">Today</string>
    <string name="cpie">C-Pie</string>
    <string name="visit">Visit</string>
    <string name="bill">Bill</string>
    <string name="distribution">Distribution</string>
    <string name="distribution2">% Distribution</string>
    <string name="brforestk">Before STK</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="curentstk">Current STK</string>

    <string name="success">Successfully</string>
    <string name="unTr">UnKnown TR</string>
    <string name="sizeEr">Packet size error</string>
    <string name="processEr">Packet Process error</string>
    <string name="notIm">Not Implemented…</string>
    <string name="unkEr">Unknown error.</string>
    <string name="fail">Connect Fail, Try Again</string>
    <string name="qty">Qty</string>
    <string name="pmt">Pmt</string>
    <string name="ds">Ds</string>
    <string name="unit">Unit</string>
    <string name="spec">Spec.</string>
    <string name="amt">Amt</string>
    <string name="targer">Target</string>
    <string name="Sum">TTL</string>
    <string name="total">Total</string>
    <string name="totalshop">Total Shop</string>
    <string name="saleshop">Sale Shop</string>
    <string name="act">Act</string>
    <string name="orderqty">Order QTY</string>
    <string name="deliveryqty">Delivery QTY</string>
    <string name="already">Already</string>
    <string name="tobe">Tobe</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="download">Download</string>
    <string name="seq">SEQ</string>
    <string name="shop">Shop</string>
    <string name="omi">Omi</string>
    <string name="status">Status</string>
    <string name="saveId">Save ID / Password</string>
    <string name="mag">Mag</string>
    <string name="cannotconnect">Can not connect to internet</string>
    <string name="orderpr">1. Order Product</string>
    <string name="propr">2. Promotion Product</string>
    <string name="cussign">Customer Signature</string>
    <string name="orderrs">Order(RS)</string>
    <string name="orderds">Order(DS)</string>
    <string name="pmtyn">PMT\n(Y/N)</string>
    <string name="confirm">Confirm</string>
    <string name="pmtdes">PMT Description</string>
    <string name="mpt">PMT</string>
    <string name="stockcase">Stock (Case)</string>
    <string name="stockea">Stock (EA)</string>
    <string name="orderup">Order\n(upon spec.)</string>
    <string name="proinfor">Promotion Information</string>
    <string name="proinforbymonth">Promotion Information\n(By Month)</string>
    <string name="prosche">Promotion Scheme</string>
    <string name="period">Period</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="nodata">No data</string>
    <string name="address">Address</string>
    <string name="tel">Tel</string>
    <string name="localtion">Location</string>
    <string name="shoptype">Shop Type</string>
    <string name="errordb">Error databse, clear cache and login again</string>
    <string name="maps">Map</string>
    <string name="notiGPS">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="finish">Finish</string>
    <string name="report">Report</string>
    <string name="channel">Channel</string>
    <string name="getGPS">GPS</string>
    <string name="getGPSFail">Fail, try again</string>
    <string name="edit">Edit</string>
    <string name="trade">Stop Trade</string>
    <string name="reason">Reason</string>
    <string name="cannotgetgps">Can not get GPS</string>
    <string name="close">Close</string>
    <string name="nonshop">Non Shop</string>
    <string name="noticloseshop">This shop will close</string>
    <string name="notidele">Do you want to delete this order?(Y/N)</string>
    <string name="notidele_promotion">This products contain promotion quantity\nDo you want to delete this order?(Y/N)</string>
    <string name="totaldownload">Total Download</string>
    <string name="selectdownload">Select Download</string>
    <string name="updatedata">Update Data</string>
    <string name="renewal">Renewal</string>
    <string name="update">Update</string>
    <string-array name="listDownload">
        <item>Address &amp; Common Data</item>
        <item>Product &amp; Display Data</item>
        <item>Summary Sales Report</item>
        <item>Summary Sales Shop</item>
        <item>Summary Delivery</item>
        <item>Summary Display</item>
        <item>Route Data</item>
        <item>Non Shop Data</item>
        <item>Non Shop SKU Data</item>
        <item>New Shop Data</item>
        <item>Promotion</item>
        <item>Order OMI Information</item>
        <item>Order OMI Detail Information</item>
    </string-array>
    <string name="wantexit">Are you sure want to exit?</string>
    <string name="adddata">Are you sure want to save data?</string>
    <string name="dong">Close</string>
    <string name="wrongpass">Wrong password</string>
    <string name="noorder">You not order</string>
    <string name="resign">Resign</string>
    <string name="cffinish">Finish</string>
    <string name="Dealer">Dealer</string>
    <string name="mylocation">My Position</string>
    <string name="myshop">My Shop</string>
    <string name="signhere">Sign here</string>
    <string name="notOpen">Not Open</string>
    <string name="gotoShop">Go to shop position</string>
    <string name="myHere">My Position</string>
    <string name="sureconfirm">Are you sure Confirm ?</string>
    <string name="wronguser">You are login offline, wrong user</string>
    <string name="mustinput">You must input username and password to login</string>
    <string name="orderButton">Visit</string>
    <string name="notsm">You are not Salesman, Please Try Again.</string>
    <string name="cannotuploadsign">Can not upload sign picture, data will be save local and resend</string>
    <string name="problemsenddata">Problem when send data! data will be save local and resend</string>
    <string name="mustsign">You must sign</string>

    <string name="Bx">Bx</string>
    <string name="CsPie">Cs</string>
    <string name="CsSNack">Cs</string>
    <string name="EA">EA</string>
    <string name="problemupload">Have problem when send data, if you exit data will be resend late</string>
    <string name="tryagain">Try Again</string>
    <string name="exit">OK</string>

    <string name="News">News</string>
    <string name="PMT">PMT</string>
    <string name="Contest">Contest</string>
    <string name="Display">Display</string>
    <string name="Product">Product</string>
    <string name="newshopfail">Can not send data. Do you want try again?</string>
    <string name="routemap">Route Map</string>
    <string name="DISTANCE">Distance</string>
    <string name="IMAGE">IMAGE</string>
    <string name="PHOTO1">Photo 1</string>
    <string name="PHOTO2">Photo 2</string>
    <string name="cannotgetidstreet">Can not get Street id</string>
    <string name="cannotgetadmincode">Can not get Admincode</string>
    <string name="orionfamily">Orion Family</string>
    <string name="msg">MSG</string>
    <string name="promotion">Promotion</string>
    <string name="product">Product</string>
    <string name="datetime">Date-Time</string>
    <string name="Department">Department</string>
    <string name="document">Document</string>


    <string name="API_100">Summary Sales Report</string>
    <string name="API_101">Summary Sales Shop</string>
    <string name="API_104">Summary Delivery</string>
    <string name="API_103">Summary Display</string>
    <string name="API_110">Route Data</string>
    <string name="API_120">Non Shop Data</string>
    <string name="API_122">Non Shop SKU Data</string>
    <string name="API_123">New Shop Data</string>
    <string name="API_121">Promotion</string>
    <string name="sendLogFile">Send Log File</string>
    <string name="message">Message</string>
    <string name="reply">Reply</string>
    <string name="newMsg">You\'ve received new message</string>
    <string name="birthday">Birthday</string>
    <string name="photo">Photo</string>
    <string name="namebirthday">Name\nBirthday</string>
    <string name="positiondepartment">Position\nDdepartment</string>
    <string name="month3">3 Month History</string>
    <string name="type">Type</string>
    <string name="deli">Deli</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="notGS">You do not have GS, Please Contact IT Team</string>
    <string name="tOrder">Torder</string>
    <string name="percentSaleShop">% Sales Shop</string>
    <string name="todayTGT">Today\nTGT</string>
    <string name="utd">UTD</string>
    <string name="order_situation">Order</string>
    <string name="sales_order">Sales + Order</string>
    <string name="apply">Apply</string>
    <string name="select_user">Select User</string>
    <string name="user">User</string>
    <string name="near">Near 50m</string>
    <string name="change_route">GS change your plan route working Day.</string>
    <string name="map_1"><span style='font-weight:bold;font-size:10px;'>shop1</span><br/>hochimin1234567890123456789</string>
    <string name="can_not_get_data">Can not get infor for this shop</string>

</resources>
