<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="6">

    <com.orion.salesman._class.RobotoTextView
        android:id="@+id/tvOne"
        style="@style/OrderInforText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/brand" />

    <com.orion.salesman._class.RobotoTextView
        android:id="@+id/tvTwo"
        style="@style/OrderInforText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tgt" />

    <com.orion.salesman._class.RobotoTextView
        android:id="@+id/tvThree"
        style="@style/OrderInforText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/today" />

    <com.orion.salesman._class.RobotoTextView
        android:id="@+id/tvFour"
        style="@style/OrderInforText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/mtd" />

    <com.orion.salesman._class.RobotoTextView
        android:id="@+id/tvFive"
        style="@style/OrderInforText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/p_tgt" />
</LinearLayout>