<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/rowHeight"
    android:background="@color/background_recyclewview"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.orion.salesman._class.RobotoTextView
            android:id="@+id/tvOne"
            style="@style/CodeFontText"
            android:layout_weight="1"
            android:text="@string/shopName" />

        <com.orion.salesman._class.RobotoTextView
            android:id="@+id/tvTwo"
            style="@style/CodeFontRow"
            android:layout_weight="1"
            android:text="@string/orderqty" />

        <com.orion.salesman._class.RobotoTextView
            android:id="@+id/tvThree"
            style="@style/CodeFontRow"
            android:layout_weight="1"
            android:text="@string/deliveryqty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.orion.salesman._class.RobotoTextView
                android:id="@+id/tvFour"
                style="@style/CodeFontRow"
                android:layout_weight="1"
                android:text="@string/already" />

            <com.orion.salesman._class.RobotoTextView
                android:id="@+id/tvFive"
                style="@style/CodeFontRow"
                android:layout_weight="1"
                android:text="@string/tobe" />

            <com.orion.salesman._class.RobotoTextView
                android:id="@+id/tvSix"
                style="@style/CodeFontRow"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
