<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/rowHeight"
    android:background="@drawable/border_dot_2"
    android:orientation="horizontal"
    android:weightSum="6">

    <com.orion.salesman._class.RobotoTextView
        android:id="@+id/tvOne"
        style="@style/CodeFontRowNew"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/border"
        android:layout_weight="2"
        android:paddingLeft="@dimen/mg_left_title_child"
        android:background="@color/text_parent_child"
        android:gravity="center|left"
        android:text="@string/cpie" />

    <com.orion.salesman._class.RobotoTextView
        android:id="@+id/tvTwo"
        style="@style/CodeFontRowNew"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/brforestk" />

    <com.orion.salesman._class.RobotoTextView
        android:id="@+id/tvThree"
        style="@style/CodeFontRowNew"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/in" />

    <com.orion.salesman._class.RobotoTextView
        android:id="@+id/tvFour"
        style="@style/CodeFontRowNew"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/out" />

    <com.orion.salesman._class.RobotoTextView
        android:id="@+id/tvFive"
        style="@style/CodeFontRowNew"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/curentstk" />

</LinearLayout>
