<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/rowHeight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="horizontal"
            android:weightSum="1">

            <com.orion.salesman._class.RobotoTextView
                android:id="@+id/tvOne"
                style="@style/CodeFontRowNew"
                android:layout_weight="0.2"
                android:gravity="left|center"
                android:text="@string/shopName" />

            <com.orion.salesman._class.RobotoTextView
                android:id="@+id/tvTwo"
                style="@style/CodeFontRowNew"
                android:layout_weight="0.4"
                android:text="@string/orderqty" />

            <com.orion.salesman._class.RobotoTextView
                android:id="@+id/tvThree"
                style="@style/CodeFontRowNew"
                android:layout_weight="0.4"
                android:text="@string/deliveryqty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.orion.salesman._class.RobotoTextView
                    android:id="@+id/tvFour"
                    style="@style/CodeFontRowNew"
                    android:layout_weight="1"
                    android:text="@string/already" />

                <com.orion.salesman._class.RobotoTextView
                    android:id="@+id/tvFive"
                    style="@style/CodeFontRowNew"
                    android:layout_weight="1"
                    android:text="@string/tobe" />

                <com.orion.salesman._class.RobotoTextView
                    android:id="@+id/tvSix"
                    style="@style/CodeFontRowNew"
                    android:layout_weight="1"
                    android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_bottom_view"
        android:layout_gravity="bottom"
        android:background="@color/background_recyclewview" />

</FrameLayout>
