<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:orientation="horizontal">

                <com.orion.salesman._class.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marginLeftInfor"
                    android:text="@string/displayinfo"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

                <com.orion.salesman._class.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="("
                    android:textColor="@color/white" />

                <com.orion.salesman._class.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/previousVisit"
                    android:textColor="@color/white" />

                <com.orion.salesman._class.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=")"
                    android:textColor="@color/white" />
            </LinearLayout>

        </FrameLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/order_img_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/rowHeight"
        android:background="@color/background_recyclewview"
        android:orientation="horizontal">

        <com.orion.salesman._class.RobotoTextView
            style="@style/CodeFontTextNoLine"
            android:layout_weight="1"
            android:text="@string/item"
            android:textAllCaps="true" />

        <com.orion.salesman._class.RobotoTextView
            style="@style/CodeFontTextNoLine"
            android:layout_weight="1"
            android:gravity="center|right"
            android:text="@string/face"
            android:textAllCaps="true" />

        <com.orion.salesman._class.RobotoTextView
            style="@style/CodeFontTextNoLine"
            android:layout_weight="1"
            android:gravity="center|right"
            android:text="@string/hanger"
            android:textAllCaps="true" />

        <com.orion.salesman._class.RobotoTextView
            style="@style/CodeFontTextNoLine"
            android:layout_weight="1"
            android:gravity="center|right"
            android:text="@string/standee"
            android:textAllCaps="true" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcDisplayInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <com.orion.salesman._class.RobotoTextView
        android:id="@+id/tvNodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nodata" />
</LinearLayout>
